--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 class="mt-5 text-center">Continents & Countries</h1>
-        <h3 class="mt-5 text-center"></h3>
+        <h5 class="mt-5 text-center">Europe - Asia - Africa - North America - South America - Oceania - Antarctica</h5>
 
         <form method="post" class="mt-4">
             {% csrf_token %}
